# dlpag

./: .gitignore  Makefile  dune  dune-project
encodings/: easy-formula.ldlpa  tictactoe.ldlpa
lib/: Ast.ml  Ast.mli  Circuit.ml  Desugar.ml  Formula.ml  Formula.mli  Lexer.mll  LexerQCIR.mll  Parse.ml  Parse.mli  Parser.messages  Parser.mly  ParserQCIR.messages  ParserQCIR.mly  Prenex.ml  QBF.ml  QCIR.ml  QCIR.mli  Solve.ml  Types.ml  dune
src/: Ast.mli  Circuit.ml  Parser.mly  ParserMessages.messages
tests.t/: run.t  ut_and.pa  ut_assign.pa  ut_bracket.pa  ut_call.pa  ut_call2.pa  ut_call_form.pa  ut_call_prog.pa  ut_neg.pa  ut_neg_call.pa  ut_neg_or.pa  ut_or.pa  ut_seq.pa  ut_star.pa  ut_star_cmplx.pa  ut_test.pa  ut_test2.pa  ut_test_call.pa  ut_test_cmplx.pa  ut_two_diamonds.pa  ut_union.pa
tests.t/qcir/: expl1.qcir  xor.qcir
