(ocamllex Lexer LexerQCIR)
(menhir
 (flags --table --explain)
 (modules Parser ParserQCIR))

(rule
 (targets ParserMessages.ml)
 (deps Parser.messages Parser.mly)
 (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(rule
 (targets ParserMessagesQCIR.ml)
 (deps ParserQCIR.messages ParserQCIR.mly)
 (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(library
  (name dlpag)
  (public_name dlpag)
  (synopsis "A library for parsing and solving Lifted DL-PA formulas and programs")
  (libraries menhirLib tsort)
  (flags :standard -color always -safe-string -warn-error -a+8 -w -50))

;(rule
; (targets Parser.messages)
; (deps Parser.mly)
; (action  (with-stdout-to %{targets} (run menhir --list-errors %{deps}))))

